@@ -1,6 +1,7 @@
 +++ version 1.0-rc7
 * gui: #2839 fixed: properly set chat window title when no tabs plugin is loaded (Vogel)
 * jabber: #2842 fixed: vcard support problems resolved (Vogel)
+* jabber: #2843 fixed: avatar handling issues resolved (Vogel)
 
 +++ version 1.0-rc6
 * gui: #2836 fixed: do not allow to shrink notification configuration widget too much (Vogel)
